# nanoPyCodeAgent

./: .env.example  AGENTS.md  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
.agents/skills/land-pr/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/release/scripts/: verify-release.sh
.github/workflows/: release.yml
docs/: RELEASING.md
docs/changelogs/: 0.1.x.md  README.md
docs/dev_notes/: README.md
docs/dev_notes/en/: 0.1.x.md
docs/dev_notes/zh-CN/: 0.1.x.md
docs/notes/: 0.1.x.md  README.md
docs/notes/en/: 0.1.x.md
docs/superpowers/plans/: 2026-06-21-release-skills.md
docs/superpowers/specs/: 2026-06-21-release-skill-design.md
src/nanopycodeagent/: __init__.py  __main__.py  agent.py
tests/: test_agent.py
