[project]
name = "nanoPyCodeAgent"
version = "0.1.0"
description = "A nano code agent built from scratch in pure Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
nanoPyCodeAgent = "nanopycodeagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanopycodeagent"]
